# pico-celeste

./: CMakeLists.txt  Emulator.cs  README.md  celeste.lua  sdkconfig  sdkconfig.old  笔记.txt
components/esp_lcd_st6201/: CMakeLists.txt  esp_lcd_st6201.c  esp_lcd_st6201_general.c  idf_component.yml
components/esp_lcd_st6201/include/: esp_lcd_st6201.h
components/esp_lcd_st6201/priv_include/: esp_lcd_st6201_interface.h
components/libfixmath/: CMakeLists.txt  idf_component.yml
main/: CMakeLists.txt  classic.c  classic.h  classiceleste_bg.c  idf_component.yml  pico-celeste.c  pico8sim.c  pico8sim.h  sprite.c  tilemap.c
sdl-host/: CMakeLists.txt  compat.h  main.c  platform.c  platform.h
